Fixed contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -11,12 +11,14 @@ body {
 }
 
 button {
-    background-color: rgb(205, 55, 0);
+    background-color: rgb(147, 39, 0);
     color: rgb(255, 254, 253);
     font-weight: bold;
+    -webkit-text-stroke: 1px black;
     padding: 20px;
     margin: 10px;
 }
+
 button:hover {
     background-color: rgb(255, 90, 30);
     color: rgb(255, 255, 253);
